--- a/SASS/components/_modal.scss
+++ b/SASS/components/_modal.scss
@@ -1,13 +1,13 @@
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
+// .visually-hidden {
+//   position: absolute;
+//   width: 1px;
+//   height: 1px;
+//   margin: -1px;
+//   border: 0;
+//   padding: 0;
+//   clip: rect(0 0 0 0);
+//   overflow: hidden;
+// }
 .modal {
   @media screen and (max-width: 1199px) {
     max-width: 450px;
@@ -50,19 +50,19 @@ textarea {
 }
 
 .form {
+  width: 100%;
   @media screen and (max-width: 1199px) {
     max-width: 450px;
-    width: 100%;
+
     transform: translate(-50%, -50%);
-    // height: 609px;
+    height: 609px;
   }
   @media screen and (min-width: 1200px) {
     position: relative;
     top: 50%;
     left: 50%;
-    max-width: 528px;
-    width: 100%;
-    // height: 581px;
+    max-width: 528;
+    height: 581px;
     background-color: $white-color;
     opacity: 1;
     transform: translate(-50%, -50%);
