--- a/SASS/components/mobil-version/_mobil-menu.scss
+++ b/SASS/components/mobil-version/_mobil-menu.scss
@@ -1,23 +1,9 @@
-.menu-button {
-  display: inline-flex;
-  // margin-left: 100px;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-
-  @media screen and (min-width: 768px) {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .icon-cross {
-    display: none;
-  }
-}
-.icon-menu:hover,
-.icon-menu:hover {
-  color: $accent-blue-color;
+// .menu-button.is-open .menu-container {
+//   display: none;
+// }
+.menu-button:focus,
+.menu-button:focus {
+  fill: $accent-blue-color;
 }
 
 .menu-button.is-open .icon-cross {
@@ -27,33 +13,63 @@
 .menu-button.is-open .icon-menu {
   display: none;
 }
-
+.menu-button .icon-menu {
+  display: block;
+}
 .menu-container {
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.02em;
   background-color: #fff;
-  @media screen and (min-width: 768px) {
-    display: flex;
-    justify-content: space-between;
-    flex-grow: 1;
-  }
   @media screen and (max-width: 767px) {
     display: none;
     position: absolute;
     top: 101%;
     left: 0;
     width: 100%;
-    z-index: 9;
     min-height: 393px;
+
     padding: 60px 0 60px 0;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08),
       0px 4px 8px rgba(0, 0, 0, 0.04);
     & .is-open {
       display: block;
     }
+    & .icon-menu {
+      display: block;
+    }
+    &.is-open .icon-menu {
+      display: none;
+    }
+    &.is-open .icon-cross {
+      display: block;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+    flex-grow: 1;
   }
 }
-.menu-button.icon-cross {
+.menu-container .is-open {
+  display: block;
+}
+.menu-button .icon-cross {
   display: none;
+}
+.menu-button {
+  display: block;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+
+  @media screen and (min-width: 767px) {
+    display: none;
+  }
+  @media screen and (max-width: 767px) {
+    & .menu-container {
+      display: block;
+    }
+  }
 }
