--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -13,7 +13,7 @@
 @import './components/social-links';
 @import './components/mobil-version/clients-mobile';
 @import './components/mobil-version/footer-mobile';
-@import './components/backdrop';
-@import './components/modal';
+// @import './components/backdrop';
+// @import './components/modal';
 // @import './components/portfolio-btns';
 @import './components/mobil-version/portfolio-mobile';
