--- a/SASS/components/_logo.scss
+++ b/SASS/components/_logo.scss
@@ -5,6 +5,7 @@
   margin-right: 60px;
   @media screen and (max-width: 767px) {
     margin-right: 0px;
+    padding: 10px;
   }
   @media screen and (min-width: 1200px) {
     margin-right: 85px;
