--- a/css/main.css
+++ b/css/main.css
@@ -228,6 +228,13 @@ ul {
   display: inline;
 }
 
+@media screen and (max-width: 768px) {
+  .mails,
+  .fone {
+    margin-top: 15px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .mails,
   .fone {
@@ -252,6 +259,10 @@ ul {
   fill: #2196f3;
 }
 
+.menu-button .icon-cross {
+  display: none;
+}
+
 .menu-button.is-open .icon-cross {
   display: block;
 }
@@ -271,6 +282,10 @@ ul {
   background-color: #fff;
 }
 
+.menu-container .is-open {
+  display: block;
+}
+
 @media screen and (max-width: 767px) {
   .menu-container {
     display: none;
@@ -279,12 +294,11 @@ ul {
     left: 0;
     width: 100%;
     min-height: 393px;
-    padding: 60px 0 60px 0;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 60px 160px;
     -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
             box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
-  }
-  .menu-container .is-open {
-    display: block;
   }
   .menu-container .icon-menu {
     display: block;
@@ -315,10 +329,6 @@ ul {
   display: block;
 }
 
-.menu-button .icon-cross {
-  display: none;
-}
-
 .menu-button {
   display: block;
   padding: 0;
@@ -333,7 +343,7 @@ ul {
 }
 
 @media screen and (max-width: 767px) {
-  .menu-button .menu-container {
+  .menu-button.is-open .menu-container {
     display: block;
   }
 }
@@ -350,6 +360,7 @@ ul {
 @media screen and (max-width: 767px) {
   .logo {
     margin-right: 0px;
+    padding: 10px;
   }
 }
 
