--- a/SASS/components/_modal.scss
+++ b/SASS/components/_modal.scss
@@ -1,17 +1,28 @@
-// .visually-hidden {
-//   position: absolute;
-//   width: 1px;
-//   height: 1px;
-//   margin: -1px;
-//   border: 0;
-//   padding: 0;
-//   clip: rect(0 0 0 0);
-//   overflow: hidden;
-// }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.is-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 .modal {
   @media screen and (max-width: 1199px) {
     max-width: 450px;
     width: 100%;
+    z-index: 9;
     transform: translate(-50%, -50%);
     // height: 609px;
   }
