--- a/SASS/components/_backdrop.scss
+++ b/SASS/components/_backdrop.scss
@@ -13,7 +13,7 @@
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   @media screen and (max-width: 767px) {
-    padding: 15px;
+    padding: 70px 30px;
     overflow-y: scroll;
   }
 }
