--- a/css/main.css
+++ b/css/main.css
@@ -1312,7 +1312,7 @@ h2 {
 
 @media screen and (max-width: 767px) {
   .backdrop {
-    padding: 15px;
+    padding: 70px 30px;
     overflow-y: scroll;
   }
 }
@@ -1339,25 +1339,39 @@ h2 {
   overflow: hidden;
 }
 
-@media screen and (max-width: 1199px) {
+.modal {
+  background-color: #ffffff;
+  opacity: 1;
+}
+
+@media screen and (min-width: 768px) {
   .modal {
     max-width: 450px;
+    height: 609px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
     width: 100%;
-    z-index: 9;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
   }
 }
 
+@media screen and (max-width: 1199px) {
+  .modal {
+    max-width: 450px;
+    height: 609px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .modal {
+    max-width: 528px;
+    height: 581px;
     position: absolute;
     top: 50%;
     left: 50%;
-    max-width: 528px;
-    height: 581px;
-    background-color: #ffffff;
-    opacity: 1;
+    width: 100%;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
   }
@@ -1397,6 +1411,7 @@ textarea {
   margin-left: auto;
   margin-right: auto;
   background-color: #ffffff;
+  position: relative;
   padding: 40px;
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1411,8 +1426,18 @@ textarea {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+}
+
+@media screen and (min-width: 768px) {
+  .form {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    max-width: 450px;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    height: 609px;
+  }
 }
 
 @media screen and (max-width: 1199px) {
@@ -1473,7 +1498,7 @@ textarea {
 }
 
 .form-input {
-  width: 100%;
+  width: 80%;
   border: 1px solid rgba(33, 33, 33, 0.2);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
