--- a/SASS/components/mobil-version/_mobil-menu.scss
+++ b/SASS/components/mobil-version/_mobil-menu.scss
@@ -24,10 +24,6 @@
   letter-spacing: 0.02em;
   background-color: #fff;
 
-  & .is-open {
-    display: block;
-  }
-
   @media screen and (max-width: 767px) {
     display: none;
     position: absolute;
@@ -38,8 +34,23 @@
     margin-left: auto;
     margin-right: auto;
     padding: 60px 160px;
+    z-index: 9;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08),
       0px 4px 8px rgba(0, 0, 0, 0.04);
+
+    & .is-open {
+      display: block;
+      position: absolute;
+      top: 101%;
+      left: 0;
+      width: 100%;
+      min-height: 393px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 60px 160px;
+      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16),
+        0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
+    }
 
     & .icon-menu {
       display: block;
@@ -73,4 +84,8 @@
       display: block;
     }
   }
+}
+
+.menu-container .is-open {
+  display: block;
 }
