--- a/css/main.css
+++ b/css/main.css
@@ -283,13 +283,23 @@ ul {
   background-color: #fff;
 }
 
-.menu-container .is-open {
-  display: block;
-}
-
 @media screen and (max-width: 767px) {
   .menu-container {
     display: none;
+    position: absolute;
+    top: 101%;
+    left: 0;
+    width: 100%;
+    min-height: 393px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 60px 160px;
+    z-index: 9;
+    -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
+            box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
+  }
+  .menu-container .is-open {
+    display: block;
     position: absolute;
     top: 101%;
     left: 0;
@@ -343,6 +353,10 @@ ul {
   .menu-button.is-open .menu-container {
     display: block;
   }
+}
+
+.menu-container .is-open {
+  display: block;
 }
 
 .logo {
@@ -1428,20 +1442,11 @@ textarea {
           flex-direction: column;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 1199px) {
   .form {
     position: relative;
     top: 50%;
     left: 50%;
-    max-width: 450px;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    height: 609px;
-  }
-}
-
-@media screen and (max-width: 1199px) {
-  .form {
     max-width: 450px;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
@@ -1454,7 +1459,7 @@ textarea {
     position: relative;
     top: 50%;
     left: 50%;
-    max-width: 528;
+    max-width: 528px;
     height: 581px;
     background-color: #ffffff;
     opacity: 1;
@@ -1498,12 +1503,17 @@ textarea {
 }
 
 .form-input {
-  width: 80%;
   border: 1px solid rgba(33, 33, 33, 0.2);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 4px;
   padding: 12px 42px 12px;
+}
+
+@media screen and (max-width: 1199px) {
+  .form-input {
+    width: 80%;
+  }
 }
 
 .form-field {
